Footer fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ a {
     display: -ms-flexbox;
     display: flex;
   }
-  .copyright {
+  #copyright {
     visibility: hidden;
   }
 }
