--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -84,7 +84,7 @@
     display: flex;
   }
 
-  .copyright {
+  #copyright {
     visibility: hidden;
   }
 }
